--- a/stile.css
+++ b/stile.css
@@ -4,8 +4,9 @@
   margin: 0;
 }
 body{
-  background-color: #eeeeee;
+  background-color: black;
 }
+
 .container{
   padding: 5px;
   position: absolute;
@@ -20,7 +21,12 @@ body{
   flex-wrap: wrap;
 }
 .nave{
+  cursor: pointer;
+  background-color: white;
   width: 55px;
   height: 55px;
-  border: 1px solid black;
+  border: 3px solid lightgrey;
+}
+.red{
+  background-color: red;
 }
